Added widget translation!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="nav-item link"><a href="#events">Offers</a></li>
                 <li class="nav-item link"><a href="#waitlist">Waitlist</a></li>
             </ul>
-            <a href="https://demo.sevenrooms.com/reservations/chickenjorges"><button class="nav-item button">Book Now</button></a>
+            <a  target="_blank" id="nav-widget-button" href="https://demo.sevenrooms.com/reservations/chickenjorges"><button class="nav-item button">Book Now</button></a>
             <p class="nav-close">&#x2715</p>
         </nav>
         <main class="main-content">
@@ -53,7 +53,10 @@
     Chicken Jorge's! Our kitchen is full of chefs hailing from the world's best restaurants, making food you really want to eat.</p>
                 <p>Get comfy in our booths, chill out outside, or if you're feeling fancy, book out our private loft and play a round of pool.</p>
                 <p>We have live music on Fridays and Saturdays, movie nights every Tuesday, and heaps of other stuff going on.</p>
-                <a href="#events"><button class="button">Sounds good!</button></a>
+                <!-- <div id="sr-subscription-root" data-button-id="5" data-color="#3D2F34">Tell me more</div>
+<script>SEVENROOMS_VENUE_ID = "jacksonsongeorge"</script>
+<script src="https://www.sevenrooms.com/widget/embed.js"></script>
+<script src="https://use.fortawesome.com/cb6d04c8.js"></script> -->
             </div>
             <div class="events section" id="events">
                 <h1 class="hero-text">What's on at Chicken Jorge's</h1>
@@ -71,4 +74,5 @@
             <iframe src="https://demo.sevenrooms.com/waitlist/chickenjorges" frameborder="0" width="450px" height="800px"></iframe>
     </div>
 </body>
+<div class="lang">🇦🇺</div>
 </html>
