--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 <li class="nav-item link"><a href="#events">Offers</a></li>
                 <li class="nav-item link"><a href="#waitlist">Waitlist</a></li>
             </ul>
-            <a  target="_blank" id="nav-widget-button" href="https://demo.sevenrooms.com/reservations/chickenjorges"><button class="nav-item button">Book Now</button></a>
+            <div>
+                <a class="nav-item link" href="/login.html">Log In</a>
+                <a  target="_blank" id="nav-widget-button" href="https://demo.sevenrooms.com/reservations/chickenjorges"><button class="nav-item button">Book Now</button></a>
+            </div>
             <p class="nav-close">&#x2715</p>
         </nav>
         <main class="main-content">
