Hidden login page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="nav-item link"><a href="#waitlist">Waitlist</a></li>
             </ul>
             <div>
-                <a class="nav-item link" href="/login.html">Log In</a>
+                <!-- <a class="nav-item link" href="/login.html">Log In</a> -->
                 <a  target="_blank" id="nav-widget-button" href="https://demo.sevenrooms.com/reservations/chickenjorges"><button class="nav-item button">Book Now</button></a>
             </div>
             <p class="nav-close">&#x2715</p>
